// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the Footer component renders renders with the default text of 2019 1`] = `
<footer
  className="footer"
>
  <p>
    2019
  </p>
</footer>
`;

exports[`the Footer component renders renders without crashing with props 1`] = `
<footer
  className="footer"
>
  <p>
    This is an updated 2019 
  </p>
</footer>
`;
